# qk8055

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.h.in  libk8055.md
cmake/: copyright.cmake  includes.cmake  modules.cmake
icons/: CMakeLists.txt
resources/: resources.qrc
src/: CMakeLists.txt  config_dialog.cpp  config_dialog.h  config_dialog.ui  gui_debug.cpp  gui_debug.h  k8055_guiview.cpp  k8055_guiview.h  k8055_guiview.ui  main.cpp  qk8055.cpp  qk8055.desktop  qk8055.h  qk8055.ui  scandevices.cpp  scandevices.h  scandevices.ui
translations/: qk8055_en.ts  qk8055_fr.ts  translations.qrc
